경력/교육 사항 추가

--- a/_config.yml
+++ b/_config.yml
@@ -65,55 +65,83 @@ about_content: | # this will include new lines to allow paragraphs
   현재는 운영 중인 CTI 서비스의 신규 기능 개발과 개선, 유지보수를 담당하고 있습니다.
 
 content:
-  - title: Projects  # Title for the section
-    layout: list # Type of content section (list/text)
+  - title: Projects
+    layout: list
     content:
       - layout: left
-        border: weak  # Value of `weak` will display a weak border below this item. # Any 
-                      # other value (or no value) means no border will be displayed
-        title: METAS&C 신규 CTI 개발
-#        link: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
-#        link_text: Link Text
-#        additional_links:
-#          - title:  Github page for project (eg. sproogen/modern-resume-theme)
-#            icon: fab fa-github
-#            url: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
+        title: METAS&C CTI 개발
         quote: >
           Asterisk ARI(WebSocket) 기반 WebRTC CTI로 전환하여 브라우저에서 통화·고객 업무를 통합
-        description: | # this will include new lines to allow paragraphs
-          Java/Spring Boot 기반으로 WebRTC 브라우저 CTI 콜 시스템을 개발했습니다.
-          기존 IP Phone(SIP) 중심의 Asterisk 연동을 Asterisk ARI(Application Realtime Interface) 이벤트 기반으로 전환하여,
-          WebSocket으로 실시간 통화 수신/제어 및 상태 이벤트를 처리했습니다.
+        description: |
+          Java/Spring Boot 기반 WebRTC CTI 콜 시스템을 개발했습니다.
+          Asterisk ARI 이벤트를 WebSocket으로 수신/처리해 통화 제어 및 상태 이벤트를 실시간으로 연동했습니다.
+          상담원 화면에서 콜 모니터링, 고객 조회, 통화 이력, 예약/콜백 등 운영 기능을 일원화했습니다.
+          싱글페이지(SPA) 형태의 동적 화면 전환 구조와 IA/UI 구성, 주요 도메인 DB 설계 및 핵심 로직 구현을 담당했습니다.
 
-          프론트엔드는 싱글페이지(SPA) 형태로 첫 화면을 유지한 채 내부 콘텐츠를 동적으로 교체하는 구조를 구현했고,
-          화면의 정보 구조(IA) 설계와 레이아웃/컴포넌트 구성(UI)을 담당했습니다.
-          상담원 화면에서 콜 모니터링, 고객 조회, 통화 이력 작성·저장, 예약/콜백 접수 등 운영 핵심 기능을 일원화했습니다.
+      - layout: left
+        title: MBTI 기반 소개팅 사이트 (수행과제)
+        sub_title: Spring Legacy · OracleDB · JSP
+        caption: 2023.11 ~ 2023.12
+        quote: >
+          MBTI 궁합 기반 매칭과 KakaoPay 결제로 매칭 코인(만남 횟수)을 충전하는 웹 서비스
+        description: |
+          Spring Legacy(JDBC/MyBatis) + OracleDB + JSP 기반 팀 프로젝트를 수행했습니다.
+          개발환경 셋팅과 ERD 설계를 진행하고, 회원가입/로그인 및 마이페이지(프로필 수정, 신청자 확인/관리) 기능을 구현했습니다.
+          KakaoPay API를 연동해 결제 완료 후 매칭 코인 충전 처리를 구현했으며,
+          REST API 기반 외부 결제 연동 흐름과 팀 협업 개발 경험을 쌓았습니다.
 
-          또한 사용자/고객/상담이력/예약 도메인의 DB 스키마 및 핵심 비즈니스 로직을 설계·구현하여
-          실시간 통화 상태에서의 안정적인 서비스 동작을 지원했습니다.
   - title: Experience
     layout: list
     content:
-      - layout: right
-        title: Company name
-        sub_title: Job title
-        caption: Date Range (eg. November 2016 - present)
-        link: Link to company (optional)
+      - layout: left
+        title: 메타에스앤씨
+        link: https://metaSNC...
+        sub_title: 개발자 (풀스택)
+        caption: 2024.06 ~ 현재
         quote: >
-          Short description of the company (optional)
-        description: | # this will include new lines to allow paragraphs
-          Description of role
+          사내 CTI/CRM 웹 시스템 개발 및 운영
+        description: |
+          Java/Spring 기반 CTI/CRM 백엔드 API 개발 및 운영
+          Asterisk(ARI/WebSocket) 연동 기반 실시간 이벤트 처리/콜 제어 기능 구현
+          JSP/JavaScript(jQuery/Ajax) 기반 상담원 화면 및 운영 화면 개발/유지보수
+          DB 스키마 설계 및 성능 이슈 분석/개선(쿼리 튜닝, 인덱스 점검 등)
+          장애 분석 및 운영 이슈 대응(배포/모니터링/로그 기반 원인 파악)
+
+      - layout: left
+        title: 메타엠
+        sub_title: 게임 QA
+        caption: 2019.06 ~ 2021.12
+        quote: >
+          라이브 게임/서비스 품질 검증 및 릴리즈 안정화 지원
+        description: |
+          기능 테스트/회귀 테스트 수행 및 이슈 재현/리포팅(재현 절차, 로그/환경 정보 정리)
+          테스트 케이스 문서화 및 배포 전후 체크리스트 운영
+          기획/개발과 커뮤니케이션하며 우선순위/영향도 기준으로 이슈 정리
+
+      - layout: left
+        title: 아이지에스
+        sub_title: 게임 QA
+        caption: 2018.02 ~ 2019.05
+        quote: >
+          신규 기능 검증 및 업데이트 릴리즈 QA
+        description: |
+          기능 테스트 및 업데이트 전후 검증(회귀 테스트 포함)
+          이슈 재현 및 리포팅, 수정 확인을 통한 품질 안정화 지원
+
   - title: Education
     layout: list
     content:
       - layout: top-right
-        title: Institution name
-        sub_title: Qualifications (eg. BA Performing Arts)
-        caption: Date Range (eg. 2016 - 2019)
+        title: KH정보교육원
+        sub_title: 웹 개발자 훈련 과정(Java/Spring)
+        caption: 2023.07 - 2023.12
         quote: >
-          Short institution or course description (optional)
-        description: | # this will include new lines to allow paragraphs
-          Description of qualification
+          Java 기반 웹 개발 과정 수료 및 팀 프로젝트 수행
+        description: |
+          Java/JDBC, JavaScript(jQuery/AJAX), Spring Framework 기반의 웹 개발 실습과 팀 프로젝트 참여
+          CRUD 중심의 서버-DB 연동 흐름을 학습, 개발 환경 설정 및 배포를 담당하며 협업을 위한 공통 템플릿/라이브러리 구성 경험
+          코드 컨벤션/네이밍 합의와 문서화를 통해 팀 커뮤니케이션 비용을 줄이고 개발 효율 향상
+
   - title: A Little More About Me
     layout: text
     content: | # this will include new lines to allow paragraphs
