주 업무 내용 추가

--- a/_config.yml
+++ b/_config.yml
@@ -128,6 +128,26 @@ content:
           기능 테스트 및 업데이트 전후 검증(회귀 테스트 포함)
           이슈 재현 및 리포팅, 수정 확인을 통한 품질 안정화 지원
 
+  - title: Key Contributions
+    layout: list
+    content:
+      - layout: left
+        title: 업무 경험
+        sub_title: Full-stack (Spring Boot / Thymeleaf / JavaScript / WebSocket / MariaDB / Asterisk ARI)
+        caption: 2024.06 - Present
+        quote: >
+          CTI 시스템 개발 및 유지 보수 업무 내 주요 경험
+        description: |
+          - 상담원 화면 프론트 기능 기획: 통화상태 → 고객정보 → 이력작성 → 콜백/예약을 끊김 없이 처리하도록 탭/패널 구성, 메뉴 구조 및 권한별 노출 정책, 화면 이동 동선/로직 설계
+          - Spring Boot + Thymeleaf 환경에서 “세션 유지형” 응대 페이지 구현: 콜 세션을 유지한 채 내부 콘텐츠를 동적 교체하여 사실상 SPA처럼 동작하도록 구성(페이지 이동 시에도 통화 컨텍스트 유지)
+          - 공통 CSS 토큰(변수) 기반 스타일 체계화: 반복 스타일을 변수/공통 컴포넌트로 정리해 유지보수 비용 절감 및 화면 일관성 강화
+          - JavaScript 기반 동적 UI 구현: 카테고리 종속 선택(상/하위 연동), 예약/통계 차트, IVR 트리 시각화 등 운영 기능의 인터랙션 구현
+          - 콜 현황 모니터링 WebSocket 구현: 콜로그/상담원 상태 정보를 객체로 구성해 인메모리로 관리하고, 구독 방식으로 화면에 실시간 반영
+          - DB 기본 성능 최적화: slow_query_log 기반으로 1초 단위로 누적되던 지연 쿼리를 추적해 주요 컬럼 인덱스 보강 및 응답 지연 완화
+          - Asterisk ARI 콜 연결 지연 개선: 콜 이벤트 처리 중 “콜 정보 저장”이 동기 처리로 지연을 유발하던 구간을 비동기 처리로 전환하여 최대 5초 수준의 체감 지연 개선
+          - DB 경량화 자동화(프로시저/이벤트 스케줄러): 로그성 대용량 테이블을 대상으로 “백업 → 정리(삭제)”를 배치로 자동 수행하여 운영 DB 부하를 낮추고 데이터 관리 주기를 체계화
+          - 수동 배포/운영: 빌드 산출물 배포, 설정 반영, 서비스 재기동/검증까지 수동 배포 절차로 운영 지원
+
   - title: Education
     layout: list
     content:
