--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ version: 2
 
 # Personal info
 name: 정 윤석
-title: Your job title
+title: 웹 개발자
 email: praymyk@gmail.com
 # email_title: Email (Email title override)
 phone: 010-4795-0025
@@ -54,30 +54,28 @@ github_username:  praymyk
 # about_title: About Me (Use this to override about section title)
 about_profile_image: Directory of profile image (eg. images/profile.jpg)
 about_content: | # this will include new lines to allow paragraphs
-  Java & Spring, Thymeleaf, JavaScript 기반으로 Asterisk/WebRTC CTI 프로젝트에서 약 2년간 풀스택 개발을 했습니다.
-
-  상담원 약 200명이 사용하는 콜 시스템에서 이력 작성·저장, 회원 관리 등 핵심 기능을 개발했고, 기존 JSP/센차(Sencha) 기반 시스템 유지보수도 병행했습니다.
-
-  Gabia Cloud(IDC / Rocky Linux 8.10) 인프라 운영을 보조하며 장애 대응과 이슈 처리에도 참여해 서비스 안정화 경험을 쌓았습니다.
-
-  운영 환경의 예외 케이스까지 고려해 사용자 관점에서 안정적으로 동작하는 기능 구현을 지향합니다.
-
-  현재는 운영 중인 CTI 서비스의 신규 기능 개발과 개선, 유지보수를 담당하고 있습니다.
+  Java & Spring, Thymeleaf, JavaScript 기반으로 Asterisk/WebRTC CTI 서비스를 약 2년간 풀스택으로 개발·운영해왔습니다. 
+  상담원 약 200명이 사용하는 콜 시스템에서 통화 이력 작성·저장, 회원 관리 등 핵심 기능을 설계부터 구현까지 담당했고, 
+  동시에 기존 JSP/Sencha 기반 레거시 시스템의 유지보수도 병행하며 안정적인 전환과 운영을 지원했습니다.
+  또한 Gabia Cloud(IDC / Rocky Linux 8.10) 환경의 인프라 운영을 보조하며 장애 대응과 이슈 트러블슈팅에 참여했고, 
+  현재는 운영 중인 CTI 서비스의 신규 기능 개발과 성능·안정성 개선, 유지보수를 담당하고 있습니다.
 
 content:
   - title: Projects
     layout: list
     content:
       - layout: left
-        title: METAS&C CTI 개발
+        title: MetaS&C CTI 개발
         sub_title: Spring Boot · MariaDB · Thymeleaf (Asterisk ARI/WebSocket)
+        caption: 2024.06 - Present
         quote: >
           Asterisk ARI(WebSocket) 기반 WebRTC CTI로 전환하여 브라우저에서 통화·고객 업무를 통합
         description: |
           Java/Spring Boot 기반 WebRTC CTI 콜 시스템을 개발했습니다.
           Asterisk ARI 이벤트를 WebSocket으로 수신/처리해 통화 제어 및 상태 이벤트를 실시간으로 연동했습니다.
-          상담원 화면에서 콜 모니터링, 고객 조회, 통화 이력, 예약/콜백 등 운영 기능을 일원화했습니다.
-          싱글페이지(SPA) 형태의 동적 화면 전환 구조와 IA/UI 구성, 주요 도메인 DB 설계 및 핵심 로직 구현을 담당했습니다.
+          상담원 화면에서 콜 모니터링, 고객 조회, 통화 이력, 예약/콜백 등 운영 기능을 일원화했습니다. <br>
+          Thymeleaf SSR 환경에서 AJAX로 콘텐츠 영역(fragment)만 교체하는 방식으로 페이지 리로드 없는 화면 전환을 구현하고, 
+          통화 세션 컨텍스트를 유지하도록 동적 화면 전환 구조와 IA/UI 구성, 주요 DB 설계 및 핵심 로직 구현을 담당했습니다.
 
       - layout: left
         title: MBTI 기반 소개팅 서비스
@@ -90,6 +88,70 @@ content:
           개발환경 셋팅과 ERD 설계를 진행하고, 회원가입/로그인 및 마이페이지(프로필 수정, 신청자 확인/관리) 기능을 구현했습니다.
           KakaoPay API를 연동해 결제 완료 후 매칭 코인 충전 처리를 구현했으며,
           REST API 기반 외부 결제 연동 흐름과 팀 협업 개발 경험을 쌓았습니다.
+
+  - title: Skill
+    layout: list
+    content:
+      - layout: left
+        title: Backend
+        description: |
+          - Java
+          - Spring Boot, Spring MVC
+          - MyBatis, JPA
+          - Thymeleaf, JSP
+          - Gradle, Maven
+          - IntelliJ, Visual Studio Code
+
+      - layout: left
+        title: DevOps
+        description: |
+          - MySQL, MariaDB
+          - Nginx, Tomcat
+          - Gabia Cloud (IDC)
+          - Linux (Rocky Linux)
+          - Docker
+
+      - layout: left
+        title: Frontend
+        description: |
+          - HTML/CSS
+          - JavaScript (ES6)
+          - jQuery, Ajax
+          - React
+          - Next.js
+
+  - title: 업무 경험
+    layout: list
+    content:
+      - layout: top-left
+        title: 주요 내용
+        sub_title: Spring Boot / Thymeleaf / JavaScript / WebSocket / MariaDB / Asterisk ARI
+        caption: 2024.06 - Present
+        quote: >
+          CTI 시스템 개발 및 유지보수 업무 내 주요 경험
+        description: |
+          <p class="center-text"><strong>프론트앤드 개발</strong></p>
+
+          - 상담원 화면 기능 기획: 통화상태 → 고객정보 → 이력작성 → 콜백/예약 흐름을 끊김 없이 처리하도록 탭/패널 구성, 메뉴 구조 및 권한별 노출 정책, 화면 이동 동선/로직 설계
+          - 세션 유지형 응대 페이지(SPA 유사): Spring Boot + Thymeleaf 환경에서 콜 세션을 유지한 채 필요한 콘텐츠만 동적 교체(페이지 이동 시에도 통화 컨텍스트 유지)
+          - CSS 토큰/변수 기반 스타일 체계화: 반복 스타일을 변수/공통화해 화면 일관성 강화 및 유지보수 비용 절감
+          - JavaScript 기반 동적 UI: 카테고리 종속 선택(상/하위 연동), 예약/통계 차트, IVR 트리 시각화 등 운영 기능 인터랙션 구현
+
+          <p class="center-text"><strong>실시간 이벤트 처리</strong></p>
+
+          - 콜 현황 모니터링 WebSocket: 콜로그/상담원 상태 정보를 인메모리로 관리하고, 구독 방식으로 실시간 화면 반영
+          - Asterisk ARI 지연 개선: 콜 이벤트 처리 중 “콜 정보 저장” 동기 구간을 스레드풀 기반 비동기 처리로 전환하여 최대 5초 수준 체감 지연 개선
+
+          <p class="center-text"><strong>성능 개선</strong></p>
+
+          - slow_query_log 기반 성능 개선: 지연 쿼리 추적 후 주요 컬럼 인덱스 보강 및 응답 지연 완화
+          - DB 경량화 자동화: 로그성 대용량 테이블에 대해 “백업 → 정리(삭제)” 프로시저/이벤트 스케줄러로 배치 자동화
+
+          <p class="center-text"><strong>배포/운영</strong></p>
+          
+          - GitHub Actions 기반 CI/CD 파이프라인 구축: 가비아 클라우드 서버 대상 배포 자동화(빌드/테스트/배포), 배포 후 검증 절차 포함
+          - 배포/운영 지원: 설정 반영, 서비스 재기동, 장애 시 롤백/재배포 등 운영 절차 수행
+  
 
   - title: Experience
     layout: list
@@ -128,33 +190,6 @@ content:
         description: |
           기능 테스트 및 업데이트 전후 검증(회귀 테스트 포함)
           이슈 재현 및 리포팅, 수정 확인을 통한 품질 안정화 지원
-
-  - title: Key Contributions
-    layout: list
-    content:
-      - layout: top-left
-        title: 업무 경험
-        sub_title: Full-stack (Spring Boot / Thymeleaf / JavaScript / WebSocket / MariaDB / Asterisk ARI)
-        caption: 2024.06 - Present
-        quote: >
-          CTI 시스템 개발 및 유지 보수 업무 내 주요 경험
-        description: |
-          **Frontend**
-          - 상담원 화면 기능 기획: 통화상태 → 고객정보 → 이력작성 → 콜백/예약 흐름을 끊김 없이 처리하도록 탭/패널 구성, 메뉴 구조 및 권한별 노출 정책, 화면 이동 동선/로직 설계
-          - 세션 유지형 응대 페이지(SPA 유사): Spring Boot + Thymeleaf 환경에서 콜 세션을 유지한 채 내부 콘텐츠를 동적 교체(페이지 이동 시에도 통화 컨텍스트 유지)
-          - CSS 토큰/변수 기반 스타일 체계화: 반복 스타일을 변수/공통화해 화면 일관성 강화 및 유지보수 비용 절감
-          - JavaScript 기반 동적 UI: 카테고리 종속 선택(상/하위 연동), 예약/통계 차트, IVR 트리 시각화 등 운영 기능 인터랙션 구현
-        
-          **Backend**
-          - 콜 현황 모니터링 WebSocket: 콜로그/상담원 상태 정보를 인메모리로 관리하고, 구독 방식으로 실시간 화면 반영
-          - Asterisk ARI 지연 개선: 콜 이벤트 처리 중 “콜 정보 저장” 동기 구간을 스레드풀 기반 비동기 처리로 전환하여 최대 5초 수준 체감 지연 개선
-        
-          **DB**
-          - slow_query_log 기반 성능 개선: 지연 쿼리 추적 후 주요 컬럼 인덱스 보강 및 응답 지연 완화
-          - DB 경량화 자동화: 로그성 대용량 테이블에 대해 “백업 → 정리(삭제)” 프로시저/이벤트 스케줄러로 배치 자동화
-        
-          **Operations**
-          - 수동 배포/운영 지원: 빌드 산출물 배포, 설정 반영, 서비스 재기동/검증까지 운영 절차 수행
 
   - title: Education
     layout: list
