--- a/_config.yml
+++ b/_config.yml
@@ -54,46 +54,102 @@ github_username:  praymyk
 # about_title: About Me (Use this to override about section title)
 about_profile_image: Directory of profile image (eg. images/profile.jpg)
 about_content: | # this will include new lines to allow paragraphs
-  Java & Spring, Thymeleaf, JavaScript 기반으로 Asterisk/WebRTC CTI 서비스를 약 2년간 풀스택으로 개발·운영해왔습니다. 
-  상담원 약 200명이 사용하는 콜 시스템에서 통화 이력 작성·저장, 회원 관리 등 핵심 기능을 설계부터 구현까지 담당했고, 
-  동시에 기존 JSP/Sencha 기반 레거시 시스템의 유지보수도 병행하며 안정적인 전환과 운영을 지원했습니다.
-  또한 Gabia Cloud(IDC / Rocky Linux 8.10) 환경의 인프라 운영을 보조하며 장애 대응과 이슈 트러블슈팅에 참여했고, 
-  현재는 운영 중인 CTI 서비스의 신규 기능 개발과 성능·안정성 개선, 유지보수를 담당하고 있습니다.
+  Java & Spring, Thymeleaf, JavaScript 기반으로 **Asterisk/WebRTC CTI 도메인**에서 웹 서비스를 풀스택으로 개발·운영해왔습니다.
+
+  상담원 약 200명이 사용하는 콜 시스템에서 **통화 이력 작성·저장**, **회원 관리** 등 핵심 기능을 **설계부터 구현까지** 담당했고,
+  동시에 **JSP/Sencha 기반 레거시 시스템 유지보수**를 병행하며 안정적인 전환과 운영을 지원했습니다.
+
+  또한 **Gabia Cloud(IDC / Rocky Linux 8.10)** 환경의 인프라 운영을 보조하며 **장애 대응**과 **이슈 트러블슈팅**에 참여했습니다.
+
+  저는 주어진 일을 “완료”하는 단계에서 끝내기보다, **반복되는 업무를 자동화**하고 **프로세스 상의 개선 여지를 찾는 것**을 좋아합니다.
+
+  그 결과, **업무 종료 후 배포가 가능하도록 CI/CD 흐름을 정리**해 불필요한 야간 대응을 줄였고,
+  **월간 사용량 확인을 자체 페이지로 구현**해 수작업 시간을 크게 단축했습니다.
+
+  앞으로도 나에게 주어진 기능 개발에만 머무르지 않고, **운영 안정성과 팀 생산성까지 함께 개선하는 개발자**로 성장하고자 합니다.
 
 content:
-  - title: Projects
+  - title: Experience
     layout: list
     content:
       - layout: left
-        title: MetaS&C CTI 개발
-        sub_title: Spring Boot · MariaDB · Thymeleaf (Asterisk ARI/WebSocket)
-        caption: 2024.06 - Present
+        title: 메타에스앤씨
+        sub_title: 개발자 (풀스택)
+        caption: 2024.06 ~ 현재
         quote: >
-          Asterisk ARI(WebSocket) 기반 WebRTC CTI로 전환하여 브라우저에서 통화·고객 업무를 통합
+          사내 CTI/CRM 웹 시스템 신규 개발 및 운영
         description: |
-          Java/Spring Boot 기반 WebRTC CTI 콜 시스템을 개발했습니다.
-          Asterisk ARI 이벤트를 WebSocket으로 수신/처리해 통화 제어 및 상태 이벤트를 실시간으로 연동했습니다.
-          상담원 화면에서 콜 모니터링, 고객 조회, 통화 이력, 예약/콜백 등 운영 기능을 일원화했습니다. <br>
-          Thymeleaf SSR 환경에서 AJAX로 콘텐츠 영역(fragment)만 교체하는 방식으로 페이지 리로드 없는 화면 전환을 구현하고, 
-          통화 세션 컨텍스트를 유지하도록 동적 화면 전환 구조와 IA/UI 구성, 주요 DB 설계 및 핵심 로직 구현을 담당했습니다.
+          - 신규 CTI/CRM 웹 시스템 구축 및 운영
+          - JSP/Thymeleaf + JavaScript(jQuery/Ajax) 기반 동적 UI 구현 및 화면 흐름 설계
+          - MariaDB 스키마 설계 및 성능 이슈 분석/개선
+          - Asterisk(ARI/WebSocket) 연동 기반 실시간 이벤트 처리 및 콜 제어 기능 구현 지원
+          - 배포/모니터링/로그 기반 장애 분석 및 운영 이슈 대응
 
       - layout: left
-        title: MBTI 기반 소개팅 서비스
-        sub_title: Spring Legacy · OracleDB · JSP
-        caption: 2023.11 ~ 2023.12
+        title: 메타엠
+        sub_title: 게임 QA
+        caption: 2019.06 ~ 2021.12
         quote: >
-          MBTI 궁합 기반 매칭과 KakaoPay 결제로 매칭 코인(만남 횟수)을 충전하는 웹 서비스
+          라이브 서비스 QA 및 릴리즈 안정화
         description: |
-          Spring Legacy(JDBC/MyBatis) + OracleDB + JSP 기반 팀 프로젝트를 수행했습니다.
-          개발환경 셋팅과 ERD 설계를 진행하고, 회원가입/로그인 및 마이페이지(프로필 수정, 신청자 확인/관리) 기능을 구현했습니다.
-          KakaoPay API를 연동해 결제 완료 후 매칭 코인 충전 처리를 구현했으며,
-          REST API 기반 외부 결제 연동 흐름과 팀 협업 개발 경험을 쌓았습니다.
+          - 기능/회귀 테스트 수행 및 이슈 재현·리포팅(재현 절차, 로그/환경 정보 정리)
+          - 버그 시트/이슈 트래커 운영: 현상·재현율·영향도 기준으로 우선순위 정리 및 커뮤니케이션
+          - UI/UX 관점의 개선 제안: 사용자 불편을 유발하는 화면 배치/플로우 분석 및 수정 의견 전달
+          - 테스트 케이스 문서화 및 배포 전후 체크리스트 운영으로 릴리즈 안정화 지원
+
+      - layout: left
+        title: 아이지에스
+        sub_title: 게임 QA
+        caption: 2018.02 ~ 2019.05
+        quote: >
+          신규 기능 검증 및 사용자 시나리오 기반 QA
+        description: |
+          - 신규 기능 및 업데이트 전후 검증
+          - 사용자 관점 시나리오 테스트 수행: 실제 사용 흐름 기준으로 UI 동선/사용성 이슈 점검 및 개선 포인트 도출
+          - 이슈 재현 및 수정 확인(리그레션 체크)으로 재발 방지 지원
+          - QA 관점 요구사항 정리: 기준을 정리해 기획/개발과 합의, 테스트 기준 명확화
+          
+
+  - title: 업무 경험
+    layout: list
+    content:
+      - layout: top-left
+        title: 주요 내용
+        sub_title: Spring Boot / Thymeleaf / JavaScript / WebSocket / MariaDB
+        caption: 2024.06 - Present
+        quote: >
+          CTI 시스템 개발 및 유지보수 업무 내 주요 경험
+        description: |
+          <p class="center-text"><strong>프론트엔드 개발</strong></p>
+
+          - 상담원 화면 기능 기획/개편: CTI 업무 흐름(통화상태 → 고객정보 → 이력작성 → 콜백/예약)을 탭/패널 중심으로 재구성하여 20여 개 화면을 약 8개 화면으로 통합(권한별 메뉴/노출 정책 포함)
+          - 세션 유지형 응대 페이지(SPA 유사) 구현: Spring Boot + Thymeleaf 환경에서 콜 세션/통화 컨텍스트를 유지한 채 필요한 콘텐츠만 동적으로 교체(페이지 이동 최소화)
+          - CSS 토큰/변수 기반 스타일 체계화: 페이지별로 분산된 스타일을 공통 레이아웃/버튼 중심으로 통일하여 UI 일관성 강화 및 유지보수 비용 절감
+          - JavaScript 기반 운영 UI 구현: 조회/검색/필터/등록·수정/페이지네이션 등 UI 이벤트 처리와 API 연동, 카테고리 종속 선택(상/하위 연동), 예약/통계 차트, IVR 트리 시각화 구현
+
+          <p class="center-text"><strong>실시간 이벤트 처리</strong></p>
+
+          - 콜 현황 모니터링 WebSocket: 콜로그/상담원 상태 정보를 인메모리로 관리하고 구독 방식으로 실시간 화면 반영(상태 변경 즉시 UI 업데이트)
+          - Spring Boot ARI 이벤트 처리 지연 개선: 콜 이벤트 처리 중 “콜 정보 저장” 동기 구간을 스레드풀 기반 비동기 처리로 전환하여 체감 지연(최대 5초 수준) 개선
+
+          <p class="center-text"><strong>성능 개선</strong></p>
+
+          - slow_query_log 기반 성능 개선: 약 1.5초 수준 지연이 발생하던 주요 조회 쿼리를 분석해 인덱스 보강 중심으로 개선, 응답 시간을 1초 이내로 단축
+          - DB 경량화 자동화: 로그성 대용량 테이블 백업·정리를 수동에서 배치로 전환하여 매일 업무시간 외 자동 실행되도록 프로시저/이벤트 스케줄러 구성(운영 부담 완화)
+
+          <p class="center-text"><strong>배포/운영</strong></p>
+
+          - GitHub Actions 기반 CI/CD 파이프라인 구축: 가비아 클라우드 서버 대상 빌드·배포 자동화 및 예약 배포(운영 시간대 배포) 구성
+          - 배포/운영 지원: 설정 반영, 서비스 재기동, 장애 시 롤백/재배포 등 운영 절차 수행 및 이슈 대응
+  
 
   - title: Skill
     layout: list
     content:
       - layout: left
         title: Backend
+        quote: >
+          업무에 사용한 혹은 학습했던 기술들입니다.
         description: |
           - Java
           - Spring Boot, Spring MVC
@@ -109,6 +165,7 @@ content:
           - Nginx, Tomcat
           - Gabia Cloud (IDC)
           - Linux (Rocky Linux)
+          - GitHub Actions
           - Docker
 
       - layout: left
@@ -119,77 +176,31 @@ content:
           - jQuery, Ajax
           - React
           - Next.js
+          
 
-  - title: 업무 경험
+  - title: 포트폴리오
     layout: list
     content:
       - layout: top-left
-        title: 주요 내용
-        sub_title: Spring Boot / Thymeleaf / JavaScript / WebSocket / MariaDB / Asterisk ARI
-        caption: 2024.06 - Present
-        quote: >
-          CTI 시스템 개발 및 유지보수 업무 내 주요 경험
+        title: CTI 웹 서비스 리빌드 (Next.js + AWS)
+        caption: 개인 프로젝트 (학습/운영 감각 유지)
+        additional_links:
+          - title: 배포주소 (admin/1234)
+            icon: fas fa-globe
+            url: https://main-build.dyzy398p1nd9g.amplifyapp.com/
+          - title: Repo
+            icon: fab fa-github
+            url: https://github.com/praymyk/React_PJ
         description: |
-          <p class="center-text"><strong>프론트앤드 개발</strong></p>
-
-          - 상담원 화면 기능 기획: 통화상태 → 고객정보 → 이력작성 → 콜백/예약 흐름을 끊김 없이 처리하도록 탭/패널 구성, 메뉴 구조 및 권한별 노출 정책, 화면 이동 동선/로직 설계
-          - 세션 유지형 응대 페이지(SPA 유사): Spring Boot + Thymeleaf 환경에서 콜 세션을 유지한 채 필요한 콘텐츠만 동적 교체(페이지 이동 시에도 통화 컨텍스트 유지)
-          - CSS 토큰/변수 기반 스타일 체계화: 반복 스타일을 변수/공통화해 화면 일관성 강화 및 유지보수 비용 절감
-          - JavaScript 기반 동적 UI: 카테고리 종속 선택(상/하위 연동), 예약/통계 차트, IVR 트리 시각화 등 운영 기능 인터랙션 구현
-
-          <p class="center-text"><strong>실시간 이벤트 처리</strong></p>
-
-          - 콜 현황 모니터링 WebSocket: 콜로그/상담원 상태 정보를 인메모리로 관리하고, 구독 방식으로 실시간 화면 반영
-          - Asterisk ARI 지연 개선: 콜 이벤트 처리 중 “콜 정보 저장” 동기 구간을 스레드풀 기반 비동기 처리로 전환하여 최대 5초 수준 체감 지연 개선
-
-          <p class="center-text"><strong>성능 개선</strong></p>
-
-          - slow_query_log 기반 성능 개선: 지연 쿼리 추적 후 주요 컬럼 인덱스 보강 및 응답 지연 완화
-          - DB 경량화 자동화: 로그성 대용량 테이블에 대해 “백업 → 정리(삭제)” 프로시저/이벤트 스케줄러로 배치 자동화
-
-          <p class="center-text"><strong>배포/운영</strong></p>
+          현재 운영 중인 CTI 웹 서비스의 핵심 기능을 Next.js 기반 AWS 환경에서 재구성해 실제로 동작시키는 것을 목표로 진행 중입니다.
           
-          - GitHub Actions 기반 CI/CD 파이프라인 구축: 가비아 클라우드 서버 대상 배포 자동화(빌드/테스트/배포), 배포 후 검증 절차 포함
-          - 배포/운영 지원: 설정 반영, 서비스 재기동, 장애 시 롤백/재배포 등 운영 절차 수행
-  
-
-  - title: Experience
-    layout: list
-    content:
-      - layout: left
-        title: 메타에스앤씨
-        link: https://metaSNC...
-        sub_title: 개발자 (풀스택)
-        caption: 2024.06 ~ 현재
-        quote: >
-          사내 CTI/CRM 웹 시스템 개발 및 운영
-        description: |
-          Java/Spring 기반 CTI/CRM 백엔드 API 개발 및 운영
-          Asterisk(ARI/WebSocket) 연동 기반 실시간 이벤트 처리/콜 제어 기능 구현
-          JSP/JavaScript(jQuery/Ajax) 기반 상담원 화면 및 운영 화면 개발/유지보수
-          DB 스키마 설계 및 성능 이슈 분석/개선(쿼리 튜닝, 인덱스 점검 등)
-          장애 분석 및 운영 이슈 대응(배포/모니터링/로그 기반 원인 파악)
-
-      - layout: left
-        title: 메타엠
-        sub_title: 게임 QA
-        caption: 2019.06 ~ 2021.12
-        quote: >
-          라이브 게임/서비스 품질 검증 및 릴리즈 안정화 지원
-        description: |
-          기능 테스트/회귀 테스트 수행 및 이슈 재현/리포팅(재현 절차, 로그/환경 정보 정리)
-          테스트 케이스 문서화 및 배포 전후 체크리스트 운영
-          기획/개발과 커뮤니케이션하며 우선순위/영향도 기준으로 이슈 정리
-
-      - layout: left
-        title: 아이지에스
-        sub_title: 게임 QA
-        caption: 2018.02 ~ 2019.05
-        quote: >
-          신규 기능 검증 및 업데이트 릴리즈 QA
-        description: |
-          기능 테스트 및 업데이트 전후 검증(회귀 테스트 포함)
-          이슈 재현 및 리포팅, 수정 확인을 통한 품질 안정화 지원
+          - 배포/운영: Amazon Amplify 기반 CI/CD 구성 (브랜치 전략에 따른 자동 배포)
+          - 기술 전환: Thymeleaf + jQuery/Ajax → Next.js + TypeScript로 재구현하며 구조 정리
+          - 장기 목표:
+            - 티켓 단위 이력 관리(DB 설계/기능 구현, Jira처럼 유연한 티켓 관리)
+            - 사용자 환경설정 기반 다크/라이트 테마 전환(전역 스타일 적용)
+            - 외부 AI(ChatGPT/Gemini) 업무 보조 기능 실험(이력 템플릿, 지식 정리 등)    
+          
 
   - title: Education
     layout: list
@@ -205,12 +216,6 @@ content:
           CRUD 중심의 서버-DB 연동 흐름을 학습, 개발 환경 설정 및 배포를 담당하며 협업을 위한 공통 템플릿/라이브러리 구성 경험
           코드 컨벤션/네이밍 합의와 문서화를 통해 팀 커뮤니케이션 비용을 줄이고 개발 효율 향상
 
-  - title: A Little More About Me
-    layout: text
-    content: | # this will include new lines to allow paragraphs
-      This is where you can write a little more about yourself. You could title this section **Interests** and include some of your other interests.
-
-      Or you could title it **Skills** and write a bit more about things that make you more desirable, like *leadership* or *teamwork*
 
 # Footer
 footer_show_references: true
