--- a/_config.yml
+++ b/_config.yml
@@ -123,7 +123,7 @@ content:
           <p class="center-text"><strong>프론트엔드 개발</strong></p>
 
           - 상담원 화면 기능 기획/개편: CTI 업무 흐름(통화상태 → 고객정보 → 이력작성 → 콜백/예약)을 탭/패널 중심으로 재구성하여 20여 개 화면을 약 8개 화면으로 통합(권한별 메뉴/노출 정책 포함)
-          - 세션 유지형 응대 페이지(SPA 유사) 구현: Spring Boot + Thymeleaf 환경에서 콜 세션/통화 컨텍스트를 유지한 채 필요한 콘텐츠만 동적으로 교체(페이지 이동 최소화)
+          - 세션 유지형 응대 페이지(SPA 유사) 구현: Spring Boot + Thymeleaf 환경에서 콜 세션/통화 컨텍스트를 유지하고 필요한 콘텐츠만 동적교체(페이지 이동 최소화)
           - CSS 변수 기반 스타일 체계화: 페이지별로 분산된 스타일을 공통 레이아웃/버튼 중심으로 통일하여 UI 일관성 강화 및 유지보수 비용 절감
           - JavaScript 기반 운영 UI 구현: 조회/검색/필터/등록·수정/페이지네이션 등 UI 이벤트 처리와 API 연동, 카테고리 종속 선택(상/하위 연동), 예약/통계 차트, IVR 트리 시각화 구현
 
