--- a/_config.yml
+++ b/_config.yml
@@ -212,7 +212,7 @@ content:
         sub_title: 웹 개발자 양성 과정 (Java/Spring/React)
         caption: 2023.07 - 2023.12
         quote: >
-          자바/스프링 개발자 양성 과정 수료
+          자바/스프링 기반 웹 개발자 양성 과정 수료
         description: |
           <p class="center-text"><strong>팀 프로젝트 리딩 (Team Leader)</strong></p>
           
