--- a/_config.yml
+++ b/_config.yml
@@ -121,27 +121,27 @@ content:
           CTI 시스템 개발 및 유지보수 업무 내 주요 경험
         description: |
           <p class="center-text"><strong>프론트엔드 개발</strong></p>
-
-          - 상담원 화면 기능 기획/개편: CTI 업무 흐름(통화상태 → 고객정보 → 이력작성 → 콜백/예약)을 탭/패널 중심으로 재구성하여 20여 개 화면을 약 8개 화면으로 통합(권한별 메뉴/노출 정책 포함)
-          - 세션 유지형 응대 페이지(SPA 유사) 구현: Spring Boot + Thymeleaf 환경에서 콜 세션/통화 컨텍스트를 유지하고 필요한 콘텐츠만 동적교체(페이지 이동 최소화)
-          - CSS 변수 기반 스타일 체계화: 페이지별로 분산된 스타일을 공통 레이아웃/버튼 중심으로 통일하여 UI 일관성 강화 및 유지보수 비용 절감
-          - JavaScript 기반 운영 UI 구현: 조회/검색/필터/등록·수정/페이지네이션 등 UI 이벤트 처리와 API 연동, 카테고리 종속 선택(상/하위 연동), 예약/통계 차트, IVR 트리 시각화 구현
-
+          
+          - **상담화면 기획/개발:** CTI 업무 흐름(통화상태 → 고객정보 → 이력작성 → 콜백/예약)을 탭/패널 중심으로 재구성하여 20여 개 화면을 약 8개 화면으로 통합(권한별 메뉴/노출 정책 포함)
+          - **세션 유지형 페이지(SPA 유사) 구현:** Spring Boot + Thymeleaf 환경에서 콜 세션/통화 컨텍스트를 유지하고 필요한 콘텐츠만 동적교체(페이지 이동 최소화)
+          - **CSS 변수 기반 체계화:** 페이지별로 분산된 스타일을 공통 레이아웃/버튼 중심으로 통일하여 UI 일관성 강화 및 유지보수 비용 절감
+          - **JavaScript 기반 UI 기능 구현:** 조회/검색/필터/등록·수정/페이지네이션 등 UI 이벤트 처리와 API 연동, 카테고리 종속 선택(상/하위 연동), 예약/통계 차트, IVR 트리 시각화 구현
+            
           <p class="center-text"><strong>실시간 이벤트 처리</strong></p>
-
-          - 콜 현황 모니터링 WebSocket: 콜로그/상담원 상태 정보를 인메모리로 관리하고 구독 방식으로 실시간 화면 반영(상태 변경 즉시 UI 업데이트)
-          - Spring Boot ARI 이벤트 처리 지연 개선: 콜 이벤트 처리 중 “콜 정보 저장” 동기 구간을 스레드풀 기반 비동기 처리로 전환하여 체감 지연(최대 5초 수준) 개선
-
+          
+          - **현황 모니터링 WebSocket:** 콜로그/상담원 상태 정보를 인메모리로 관리하고 구독 방식으로 실시간 화면 반영(상태 변경 즉시 UI 업데이트)
+          - **JAVA 이벤트 처리 지연 개선:** 콜 이벤트 처리 중 “콜 정보 저장” 동기 구간을 스레드풀 기반 비동기 처리로 전환하여 체감 지연(최대 5초 수준) 개선
+            
           <p class="center-text"><strong>성능 개선</strong></p>
-
-          - slow_query_log 기반 성능 개선: 약 1.5초 수준 지연이 발생하던 주요 조회 쿼리를 분석해 인덱스 보강 중심으로 개선, 응답 시간을 1초 이내로 단축
-          - DB 경량화 자동화: 로그성 대용량 테이블 백업·정리를 수동에서 배치로 전환하여 매일 업무시간 외 자동 실행되도록 프로시저/이벤트 스케줄러 구성(운영 부담 완화)
-
+          
+          - **Slow Query 성능 개선:** 약 1.5초 수준 지연이 발생하던 주요 조회 쿼리를 분석해 인덱스 보강 중심으로 개선, 응답 시간을 1초 이내로 단축
+          - **DB 경량화 자동화:** 로그성 대용량 테이블 백업·정리를 수동에서 배치로 전환하여 매일 업무시간 외 자동 실행되도록 프로시저/이벤트 스케줄러 구성(운영 부담 완화)
+            
           <p class="center-text"><strong>배포/운영</strong></p>
-
-          - GitHub Actions 기반 CI/CD 파이프라인 구축: 가비아 클라우드 서버 대상 빌드·배포 자동화 및 예약 배포(운영 시간대 배포) 구성
-          - 배포/운영 지원: 설정 반영, 서비스 재기동, 장애 시 롤백/재배포 등 운영 절차 수행 및 이슈 대응
-  
+          
+          - **CI/CD 파이프라인 구축:** GitHub Actions를 활용해 가비아 클라우드 서버 대상 빌드·배포 자동화 및 예약 배포(운영 시간대 배포) 구성
+          - **배포/운영 지원:** 설정 반영, 서비스 재기동, 장애 시 롤백/재배포 등 운영 절차 수행 및 이슈 대응
+            
 
   - title: Skill
     layout: list
@@ -196,9 +196,9 @@ content:
           
           <p><em>개인 시간에 학습 목적으로 진행하며, 실서비스 환경에서 운영 하는 것을 목표로 꾸준히 개선하고 있습니다.</em></p>
           
-          - <strong>배포/운영:</strong> Amazon Amplify 기반 CI/CD 구성 (브랜치 전략에 따른 자동 배포)<br><br>
-          - <strong>기술 전환:</strong> Thymeleaf + jQuery/Ajax → Next.js + TypeScript로 재구현하며 구조 정리<br><br>
-          - <strong>장기 목표 (Roadmap):</strong><br>
+          - <strong>배포/운영:</strong> Amazon Amplify 기반 CI/CD 구성 (브랜치 전략에 따른 자동 배포)<br>
+          - <strong>기술 전환:</strong> Thymeleaf + jQuery/Ajax → Next.js + TypeScript로 재구현하며 구조 정리<br>
+          - <strong>장기 목표:</strong><br>
             &nbsp;&nbsp;- <strong>아키텍처 분리:</strong> Frontend(Next.js)와 Backend(Spring Boot)를 분리하여 RESTful API 기반의 확장성 있는 구조로 고도화<br>
             &nbsp;&nbsp;- <strong>티켓 관리 시스템:</strong> Jira와 유사한 티켓 단위 이력 관리 기능 구현 (DB 모델링 및 워크플로우 설계)<br>
             &nbsp;&nbsp;- <strong>사용자 경험 개선:</strong> 전역 상태 관리를 통한 다크/라이트 테마 전환 기능 구현<br>
